Fixed up the CSS and semantics of the HTMl pages. Fixed the responsiveness so it looks good on mobile.

--- a/src/scss/_containers.scss
+++ b/src/scss/_containers.scss
@@ -48,3 +48,59 @@ input {
   align-items: center;
   justify-content: center;
 }
+
+.browseProductsButton {
+  text-align: center;
+  padding-top: 2rem;
+}
+
+#searchProducts {
+  flex-direction: column;
+}
+
+.searchTitle {
+  padding-bottom: 2rem;
+}
+
+.productImages {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+@media (max-width: 400px) {
+  .container {
+    max-width: 100%;
+  }
+
+  .offcanvas-body,
+  .offcanvas-header,
+  #offcanvas-end {
+    max-width: 200px;
+    padding: 0;
+  }
+
+  .profileAttributeContainer,
+  .profileAttributes {
+    flex-direction: column;
+    padding-top: 2rem;
+  }
+
+  .productCard,
+  #productThumbnail,
+  #searchProducts,
+  .productAttributes,
+  .productDescription {
+    max-width: 100vw;
+    flex-direction: column;
+    padding: 0 2rem;
+  }
+
+  .searchTitle {
+    padding-bottom: 2rem;
+  }
+
+  input {
+    min-width: 5rem;
+  }
+}
