--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,6 +1,10 @@
 footer {
   background-color: var(--secondary);
   margin-top: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 6rem;
 }
 
 .copyright,
@@ -8,11 +12,31 @@ footer {
   color: var(--white);
 }
 
-.social-icons {
-  font-size: 4rem;
+.social-icons i {
+  font-size: 3rem;
   margin-right: 2rem;
 }
 
-i {
-  padding-left: 2rem;
+@media (max-width: 400px) {
+  footer {
+    margin: 2rem 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 3rem 0 3rem 0;
+  }
+
+  footer a .logo {
+    margin: 0;
+  }
+
+  .social-icons i {
+    font-size: 5rem;
+    padding: 2rem 0 0 0;
+  }
+
+  .copyright {
+    font-size: 2.5rem;
+    padding: 0 0 2rem 0;
+  }
 }
