--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,7 +1,24 @@
 main {
   margin: auto;
+  border: solid red 1px;
+  display: flex;
+  align-items: center;
+  margin: 2rem 6rem;
+  flex-direction: column;
+}
+
+.main-home {
+  flex-direction: row;
 }
 
 i {
   font-size: 2rem;
+}
+
+@media (max-width: 400px) {
+  main {
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+  }
 }
